[package]
name = "io_serde"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.160", default-features = false }
